[tool.poetry]
name = "study-spark"
version = "0.1.0"
description = ""
authors = ["Rozlana Gabdullina <rozlana.gab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
pyarrow = "^14.0.2"
pandas = "^2.1.4"
dynaconf = "^3.2.4"
opencage = "^2.4.0"
pygeohash = "^1.2.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
chispa = "^0.9.4"
black = "^23.12.1"


[tool.poetry.group.testing.dependencies]
pytest-mock = "^3.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
